# game-of-life-python

./: README.md  pyproject.toml
modules/: Cell.py  Grid.py
tests/: test_cell.py  test_cell_placement.py  test_grid.py
