[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["Ben Johnson <ben@bnjn.tech>"]
readme = "README.md"
packages = [{include = "game_of_life"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
